--- a/app/src/main/res/layout/activity_list_view_pesanan.xml
+++ b/app/src/main/res/layout/activity_list_view_pesanan.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/bg1"
-    tools:context=".ListViewUser">
+    tools:context=".ListViewPesanan">
 
     <androidx.cardview.widget.CardView
         android:layout_width="352dp"
@@ -40,7 +40,7 @@
 
 
     <Button
-        android:id="@+id/buttonSyncUser"
+        android:id="@+id/buttonSyncPesanan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#000"
@@ -49,7 +49,7 @@
         android:text="Sync / Refresh" />
 
     <ListView
-        android:id="@+id/listViewUser"
+        android:id="@+id/listViewPesanan"
         android:layout_width="match_parent"
         android:layout_height="410dp"
         android:layout_marginHorizontal="10dp"
