--- a/app/src/main/res/layout/activity_user_tambah.xml
+++ b/app/src/main/res/layout/activity_user_tambah.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".UserAction">
+    tools:context=".UserTambah">
 
     <TextView
         android:layout_width="match_parent"
@@ -83,13 +83,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Edit"
-        android:id="@+id/btnEdit" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hapus"
-        android:id="@+id/btnHapus" />
+        android:text="tambah"
+        android:id="@+id/btnTambah" />
 
 </LinearLayout>
