--- a/app/src/main/res/layout/lapangan.xml
+++ b/app/src/main/res/layout/lapangan.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:text="ID"
-        android:id="@+id/id_user"
+        android:id="@+id/id_lap"
         android:textSize="20dp"
         android:textColor="#000"
         android:layout_width="wrap_content"
@@ -21,41 +21,18 @@
         android:id="@+id/name"
         android:textColor="#000"
         android:textSize="20dp"
-        android:layout_below="@+id/id_user"
+        android:layout_below="@+id/id_lap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:text="Point"
-        android:id="@+id/point"
+        android:text="Status"
+        android:id="@+id/status"
         android:textColor="#000"
         android:textSize="20dp"
         android:layout_below="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <TextView
-        android:text="No. HP"
-        android:id="@+id/nohp"
-        android:textColor="#000"
-        android:textSize="20dp"
-        android:layout_below="@+id/point"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:text="Username"
-        android:id="@+id/username"
-        android:textColor="#000"
-        android:textSize="20dp"
-        android:layout_below="@+id/nohp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:text="Password"
-        android:id="@+id/password"
-        android:textColor="#000"
-        android:textSize="20dp"
-        android:layout_below="@+id/username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
